# MiciusFCEmulator

./: .gitattributes  CMakeLists.txt  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.github/workflows/: deploy-pages.yml
public/: apu.worklet.js
src/: App.vue  main.cpp  style.css
src/Cartridge/: Cartridge.cpp  Cartridge.h
src/Controller/: Controller.cpp  Controller.h
src/Cpu/: Cpu.cpp  Cpu.cpp.old  Cpu.h  Cpu.h.old  cpu.cpp
src/Cpu/AddressingModes/: Absolute.cpp  Absolute.h  AbsoluteX.cpp  AbsoluteX.h  AbsoluteY.cpp  AbsoluteY.h  Accumulator.cpp  Accumulator.h  AddressingMode.h  Immediate.cpp  Immediate.h  Implied.cpp  Implied.h  Indirect.cpp  Indirect.h  IndirectX.cpp  IndirectX.h  IndirectY.cpp  IndirectY.h  Relative.cpp  Relative.h  ZeroPage.cpp  ZeroPage.h  ZeroPageX.cpp  ZeroPageX.h  ZeroPageY.cpp  ZeroPageY.h
src/Cpu/Instructions/: ADC.cpp  ADC.h  AND.cpp  AND.h  ASL.cpp  ASL.h  AccumulatorInstruction.h  AddressedInstruction.h  AllInstructions.h  BCC.cpp  BCC.h  BCS.cpp  BCS.h  BEQ.cpp  BEQ.h  BIT.cpp  BIT.h  BMI.cpp  BMI.h  BNE.cpp  BNE.h  BPL.cpp  BPL.h  BRK.cpp  BRK.h  BVC.cpp  BVC.h  BVS.cpp  BVS.h  CLC.cpp  CLC.h  CLD.cpp  CLD.h  CLI.cpp  CLI.h  CLV.cpp  CLV.h  CMP.cpp  CMP.h  CPX.cpp  (+98 more)
src/Emulator/: MemoryMap.cpp  MemoryMap.h  emulator.cpp  emulator.h
src/Ppu/: Ppu.cpp  Ppu.h
src/components/: HelloWorld.vue
src/emulator/: Emulator.ts
src/emulator/apu/: ApuStub.ts
src/emulator/bus/: Bus.ts
src/emulator/cart/: Cartridge.ts  ines.ts
src/emulator/cart/mappers/: Mapper.ts  Mapper0_Nrom.ts  Mapper16_BandaiFcg.ts  Mapper19_Namco163.ts  Mapper1_Mmc1.ts  Mapper2_Uxrom.ts  Mapper3_Cnrom.ts  Mapper4_Mmc3.ts  Mapper67_Sunsoft3.ts  Mapper74_Mmc3Clone.ts  Mapper90_JyCompany.ts
src/emulator/cpu/: Cpu6502.ts  Disassembler.ts  OpcodeTable.ts
src/emulator/debug/: BreakpointManager.ts  TraceBuffer.ts
src/emulator/input/: Joypad.ts
src/emulator/ppu/: PpuStub.ts  nesColor.ts
src/emulator/util/: hex.ts
src/emulator/video/: FrameBuffer.ts
src/platform/audio/: WebAudioWorkletSink.ts  apu.worklet.ts
src/platform/video/: Webgl2VideoSink.ts
